# unitypkg

./: Cargo.toml  README.md  default.nix  flake.nix
.github/: dependabot.yml
.github/workflows/: rust-ci.yml
crates/unitypkg-cli/: Cargo.toml
crates/unitypkg-cli/src/: cli.rs
crates/unitypkg-cli/tests/: unpack.rs
crates/unitypkg-core/: Cargo.toml  README.md
crates/unitypkg-core/src/: unpack.rs  writer.rs
crates/unitypkg-core/tests/: invalid-uuid.unitypackage  simple-cube.unitypackage
src/: lib.rs  reader.rs  unpack.rs
src/core/: mod.rs
src/reader/: mod.rs
tests/fixtures/: simple-material.unitypackage
unitypkg-cli/: Cargo.toml  README.md
unitypkg-cli/src/: cli.rs  main.rs
unitypkg-core/: Cargo.toml
unitypkg-core/src/: lib.rs  reader.rs  unpack.rs  writer.rs
unitypkg-core/tests/: empty.unitypackage
