[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
authors = ["Luna Simons <luna@bddvlpr.com>"]
edition = "2021"
description = "Manipulate Unity's portable package files"
repository = "https://github.com/bddvlpr/unitypkg"
license = "MIT"
keywords = ["gamedev", "unity", "unitypkg"]

[workspace.dependencies]
tempfile = "3.13"
