[package]
name = "unitypkg-cli"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
clap_complete = "4.5.6"
unitypkg-core = { path = "../unitypkg-core" }
