[package]
name = "unitypkg-cli"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
unitypkg-core = { path = "../unitypkg-core" }

[dev-dependencies]
assert_cmd = "2.0"
tempfile = { workspace = true }
