[package]
name = "unitypkg-core"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
flate2 = "1.0"
regex = "1.10"
tar = "0.4"
thiserror = "1.0"
uuid = { version = "1.10", features = ["v4"] }

[dev-dependencies]
tempfile = { workspace = true }
