[package]
name = "unitypkg-core"
version = "0.1.1"
authors.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
flate2 = "1.1"
regex = "1.11"
tar = "0.4"
thiserror = "2.0"
uuid = { version = "1.14", features = ["v4"] }

[dev-dependencies]
tempfile = { workspace = true }
